# FragM

./: .directory  .gitignore  .gitmodules  .travis.yml  EULA.txt  EULA_de.txt  EULA_nl.txt  EULA_ru.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
Fragmentarium-Source/: .directory  .gitignore  3Dickulus-HOW-TO.txt  3Dickulus.changes  CMakeLists.txt  Fragmentarium.desktop  Fragmentarium.pro  Fragmentarium.qrc  Notes.txt
Fragmentarium-Source/Examples/: .directory
Fragmentarium-Source/Examples/2D Systems/: .directory  BurningShip.frag  DomainDistortion2.frag  Droste.frag  DrosteGrid.frag  Ducks.frag  GraphPlotter.frag  Kali.frag  Mandelbrot-AverageColoring.frag  Mandelbrot-DE.frag  Mandelbrot.frag  MandelbrotCheckers.frag  MandelbrotOrbitTrap.frag  Metabrot.frag  Metaship1.frag  Reaction-Diffusion.frag  Thorn.frag  mandel_mobius.frag  mandelexOptimised.frag
Fragmentarium-Source/Examples/Benesi/: .directory  BenesiPineFoldDE.frag  DE-Kn2ColorandHeightmap.frag  Fast-Raytracer-with-Palette.frag  Fast-Raytracer-with-Textures.frag  Fast-Raytracer-with-Textures_and_MultiSampling_beta.frag  Mandelbulb_with_Feedback.frag  MengerSmooth.frag  MengerSmoothforWeb.frag  MengerWorkOnHeightmap.frag  MengerWorkOnStella.frag  Menger_with_Feedback_and_Multisample_beta.frag  MengersmoothPolyhedra.frag  MengersmoothnoDE.frag  PineV322.frag  mengermultisampleKN2.frag  pinewithgoodcolor.frag  pinewithoptionsDE.frag  pinewithoptionsoriginalBruteRaytracer.frag  zappatest.fdbk
Fragmentarium-Source/Examples/DarkBeam/: BioCube.frag  FoldcutToy.frag
Fragmentarium-Source/Examples/Experimental/: .directory  3DMandel.frag  3Dickulus.frag  AnimationModeTest.frag  BenesiFoldedMandelbulb.frag  BurningShirp.frag  DoubleTest.frag  Knot.frag  LiftedDomainColoring3D.frag  LogSliderTest.frag  LogisticBulb.frag  MMM.frag  Mandelbrot-Progressive.frag  Mixed.frag  Mobius.frag  Moebiusbulb.frag  Noise.frag  OctahedronOT.frag  PseudoKleinian-Progressive-DOF.frag  QuaternionMandelbrot4D.frag  Raytracingtestfrag.frag  SphereSponge.frag  Spudsville2.frag  Stereographic4DJulia.frag  StereographicQuaternionJulia.frag  Terrain.frag  Tetrahedron-Alternative.frag  TextureTest.frag  TriPlanarTexturing.frag  iqPath4fragmentarium.frag
Fragmentarium-Source/Examples/Historical 3D Fractals/: Mandelbox.frag  Mandelbulb.frag  QuaternionJulia.frag
Fragmentarium-Source/Examples/Include/: 2D-HP.frag  2D.frag  3D.frag  3DKn-1.0.0.frag  3DKn-1.0.1.frag  3DKn-1.0.4.frag  3DKn-1.0.5.frag  Brute-Raytracer.frag  Brute3D.frag  BufferShader-1.0.1.frag  BufferShader-1.0.2.frag  BufferShader-4.frag  BufferShader.frag  BufferShaderIFS.frag  BufferShaderRD.frag  ColorPalette.frag  ColorPalette2.frag  Complex.frag  ComplexBase.frag  DE-Kn10.frag  DE-Kn2.frag  DE-Kn2ColorandHeightmap.frag  DE-Kn2cr11.frag  DE-Kn2exp.frag  DE-Kn8.frag  DE-Raytracer-Slicer.frag  DE-Raytracer-v0.9.0.frag  DE-Raytracer-v0.9.1.frag  DE-Raytracer-v0.9.10.frag  DE-Raytracer.frag  DE-RaytracerX.frag  DE-kn9.frag  DepthBufferShader.frag  DoubleMath.frag  Fast-Raytracer.frag  IBL-Pathtracer.frag  IBL-Raytracer.frag  IQ-Clouds.frag  Kaliset3D.frag  Kaliset3Dtex.frag  (+19 more)
Fragmentarium-Source/Examples/Kaleidoscopic IFS/: Dodecahedron.frag  Icosahedron.frag  Menger.frag  NewMenger.frag  Octahedron.frag  Tetrahedron.frag
Fragmentarium-Source/Examples/Kali's Creations/: Kalibox.frag  KboxExpSmooth.frag  LivingKIFS.frag  RotJulia.frag  Treebroccoli.frag  Xray_skifs.frag
Fragmentarium-Source/Examples/Knighty Collection/: Baird-Delta.frag  Doyle-Spirals.frag  Fold and Cut Polyhedra - Original.frag  Fold and Cut Polyhedra.frag  Icosahedral_polyhedra_iterated_11.frag  Icosahedral_polyhedra_iterated_20.frag  Knot.frag  Koch01.frag  MandalayBox.frag  MandelbrotHeightfield.frag  Menger_Sphere.frag  Menger_iterated_20.frag  NewtonHeightfield.frag  Pseudo-MandalayBox.frag  PseudoKleinian.frag  PseudoKleinianMenger.frag  PseudoKleinian_4D_Quaternion_Julia.frag  algebraic07.frag  hyperbolic-tesselation-2Din3D-colored-02.frag  mdifs.frag  my_2D.frag  polychora-special.frag  polychora-special02.frag  polychora03.frag  polychora06.frag
Fragmentarium-Source/Examples/TestSuite/: BufferShaderUniforms_BufferShader.frag  BufferShaderUniforms_Main.frag  BufferShaderUniforms_MainWithoutBufferShader.frag
Fragmentarium-Source/Examples/Theory/: .directory  Convolution.frag  Mandelbox - Dual Numbers DE - Slicer.frag  Mandelbox - Dual Numbers DE.frag  Mandelbrot - Emulated Doubles.frag
Fragmentarium-Source/Examples/Tutorials/: 00 - Simple 2D system.frag  01 - Simple 2D Escape Time Fractal.frag  04 - Textures.frag  10 - Simple Distance Estimated 3D system.frag  11 - Simple Distance Estimated 3D fractal.frag  12 - Faster raytracing of 3D fractals.frag  20 - Progressive 2D.frag  21 - Progressive 2D Escape Time Fractal.frag  22 - Progressive 3D Rendering.frag  24 - Pure 3D.frag  25 - Image Based Lighting.frag  26 - 3D fractals without a DE.frag  30 - Simple Keyframe Animation.frag  31 - Simple Focal Plane Tracking Target.frag  32 - Simple Multi-Parameter Easing Animation.frag  33 - Simple Skybox.frag  bermarte.frag
Fragmentarium-Source/Fragmentarium/: Main.cpp
Fragmentarium-Source/Icons/: .directory
Fragmentarium-Source/Misc/: .directory  ScriptingCmds.txt  ffmpeg.opt  glsl.xml  mencoder-overcomplete-wavelet.opt  mencoder.opt  mkcombined.sh
Fragmentarium-Source/ThirdPartyCode/: EasingAnimation.h  EasingDialog.ui  EasingWindow.cpp  EasingWindow.h  ExpSpinBox.cpp  ExpSpinBox.h  Highlighter.h  QtSpline.cpp  QtSpline.h  TimeLine.cpp  TimeLine.h  TimeLineDialog.ui  VideoDialog.cpp  VideoDialog.h  VideoDialog.ui  asmbrowser.cpp  asmbrowser.h  ggr2glsl.cpp  ggr2glsl.h  hdrloader.cpp  hdrloader.h  qdoublerangeslider.cpp  qdoublerangeslider.h  qrangeslider.cpp  qrangeslider.h
Fragmentarium-Source/Translations/: Fragmentarium_de.ts  Fragmentarium_en.ts  Fragmentarium_nl.ts  Fragmentarium_ru.ts
Fragmentarium-Source/fqScript/: AnotherTileSizeBenchmark.fqs  TileSizeBenchmark.fqs  renderKeyframes.fqs  renderPresets.fqs  test-sampler.fqs  test0.fqs  test1.fqs  test2.fqs  testFrag.fqs  testFrags.fqs
(+91 files in other folders)
